# AEgISGRPCAnalysor

./: CMakeLists.txt  README.txt
src/GRPCUtility/: CMakeLists.txt
src/GRPCUtility/include/: GRPCUtility.h
src/GRPCUtility/src/: GRPCUtility.cxx
src/LCIO/: LCIOConfig.cmake  LCIOConfigVersion.cmake  pom.xml  streamlogConfig.cmake  streamlogConfigVersion.cmake
src/LCIO/config/: lcio.properties
src/LCIO/doc/: index.html  lcio.xml
src/LCIO/include/: lcio.h
src/LCIO/include/streamlog/: baselevels.h  logbuffer.h  loglevels.h  logscope.h  logstream.h  prefix.h  streamlog.h
src/LCIO/lib/: libsio.so.2.12
src/LCIO/src/aid/EVENT/: LCIO.aid
src/LCIO/src/cpp/include/pre-generated/EVENT/: LCIO.h
src/LCIO/src/latex/manual/: manual.tex
src/Modules/: Doxyfile.in  FindAIDA.cmake  set_default_settings.cmake
src/SLCIOROOT/: CMakeLists.txt
src/SLCIOROOT/include/: Mapping.h  SLCIOROOT.h
src/SLCIOROOT/src/: SLCIOROOT.cxx
src/TRACEROOT/: CMakeLists.txt
src/TRACEROOT/include/: TRACEROOT.h
src/TRACEROOT/src/: TRACEROOT.cxx
src/analysis/: DifEfficiency.C  PlotAbsTime.C  PlotXY.C  PseudoTrace.C  README.txt
src/analysis/include/: AEgISGRPCUtility.h
src/tinyxml/: CMakeLists.txt
src/xml/: config.xml
