SET(CXX_STANDARD 17) # C++14...
SET(CXX_STANDARD_REQUIRED ON) #...is required...
SET(CXX_EXTENSIONS ON) #...without compiler extensions like gnu++11
FILE(COPY ./include/ DESTINATION ${PROJECT_INCLUDE_DIR})
INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}")
FILE (GLOB_RECURSE TINYXML_SRC_FILES ./source/*)
ADD_LIBRARY( tinyxml STATIC ${TINYXML_SRC_FILES} )
TARGET_LINK_LIBRARIES( tinyxml )
#INSTALL( TARGETS tinyxml LIBRARY DESTINATION ${LIBRARY_OUTPUT_PATH} ARCHIVE DESTINATION ${LIBRARY_OUTPUT_PATH} )
INSTALL(TARGETS tinyxml LIBRARY DESTINATION ${LIBRARY_OUTPUT_PATH} ARCHIVE DESTINATION ${LIBRARY_OUTPUT_PATH})
